src/main/java/com/example/hunters_league/web/errors/user/UserNotFoundException.java
package com.example.hunters_league.web.errors.user;

public class UserNotFoundException extends RuntimeException {

    public UserNotFoundException(String message) {
        super(message);
    }
}
